# VoiceMind

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT.md  IOS_SCANNER_DEBUG_GUIDE.md  MACOS_PERMISSIONS_GUIDE.md  MACOS_REDESIGN.md  MACOS_REWRITE_COMPLETE.md  PAIRING_GUIDE.md  PERMISSIONS_TROUBLESHOOTING.md  PROGRESS.md  QRCODE_PAIRING_GUIDE.md  QRCODE_SCANNER_TEST_GUIDE.md  README.md  SETUP_GUIDE.md  SPEECH_MIGRATION_PLAN.md  SPEECH_VERIFICATION_REPORT.md  TESTING_GUIDE.md  XCODE_SETUP.md  XCODE_SETUP_CHECKLIST.md  _BACKUP_28043.gitignore  check_files.sh  check_scanner.sh  test_bridge  test_speech_recognition.sh
.claude/: settings.local.json
.trae/documents/: ios_ui_optimization_plan.md  mac_model_management_plan.md
SharedCore/: Package.swift
VoiceMind.xcworkspace/: contents.xcworkspacedata
VoiceMindMac/: SHERPA_ONNX_INTEGRATION.md
VoiceMindMac/VoiceMindMac/: Info.plist  VoiceMindMac-Bridging-Header.h  VoiceMindMac.entitlements  VoiceMindMacApp.swift
VoiceMindMac/VoiceMindMac.xcodeproj/: project.pbxproj
VoiceMindMac/VoiceMindMacTests/: AccessibilityTextInjectorSourceTests.swift  AcousticFeedbackDetectorTests.swift  AppLocalizationTests.swift  AppSettingsTests.swift  AppThemePreferenceTests.swift  AudioFormatTests.swift  CollaborationControlsPolicyTests.swift  ConnectionManagerTests.swift  ConnectionPresentationPolicyTests.swift  DeprecatedPreferenceCleanupPolicyTests.swift  FocusedInputDetectorSourceTests.swift  HomeDashboardThemePolicyTests.swift  HotkeyMonitorTests.swift  InjectionTargetCaptureSourceTests.swift  KeywordActionRoutingPolicyTests.swift  LocalNetworkAccessPolicyTests.swift  LocalSpeechRecognitionStartPolicyTests.swift  LocalSpeechRecognitionStopPolicyTests.swift  MacAppUpdateManagerTests.swift  MacBillingPresentationPolicyTests.swift  MainWindowFullscreenLayoutTests.swift  MainWindowNavigationPolicyTests.swift  MainWindowPagePersistencePolicyTests.swift  MenuBarSpeechRoutingSourceTests.swift  MenuBarStatusPresentationTests.swift  (+27 more)
VoiceMindWindows/: FEATURE_COMPARISON.md  NETWORK_COMMUNICATION_TEST.md  TASK1_TEXT_INJECTION.md  TASK2_FRONTEND_UI.md  TASK3_STATUS_UPDATE.md  package-lock.json  package.json  test_text_injection.html  test_webview.html  vite.config.js
VoiceMindWindows/src-tauri/: Cargo.toml  history.json  tauri.conf.json
VoiceMindWindows/src-tauri/capabilities/: default.json
VoiceMindWindows/src-tauri/logs/: voicemind.log.2026-03-26
VoiceMindWindows/src-tauri/nsis/: installer.nsh
VoiceMindWindows/src-tauri/src/: asr.rs  bonjour.rs  commands.rs  commands_updated.rs  events.rs  injection.rs  main.rs  network.rs  network_enhanced.rs  overlay.rs  pairing.rs  qwen_asr.rs  settings.rs  speech.rs  vad.rs
VoiceMindWindows/src-tauri/src/qwen3_onnx/: audio.rs  decoder.rs  encoder.rs  engine.rs  mod.rs  model.rs  tokenizer.rs
VoiceRelay.xcworkspace/: contents.xcworkspacedata
docs/: App-Store-本地化描述.md  MODEL_MANAGEMENT_GUIDE.md  SPEECH_OPTIMIZATION.md  optional-remote-access.md  提审前检查报告.md  提审文档.md
scripts/: check_ios_app_icon_alpha.sh  fix_mac_brand_terms.py
website/: DEPLOYMENT_GUIDE.md  FTP_SECURITY_CONFIG.md  eula.html  index.html  privacy.html  script.js  styles.css
(+335 files in other folders)
