[package]
name = "voice-mind-windows"
version = "0.2.1"
edition = "2021"
description = "VoiceMind for Windows - iPhone as wireless microphone"
authors = ["VoiceMind Team"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
flate2 = "1.0"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["stream", "json"] }
uuid = { version = "1.0", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
qrcode = "0.14"
image = "0.24"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
hostname = "0.4"
mdns-sd = "0.11"
local-ip-address = "0.6"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
webrtc-vad = "0.4"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "ndarray"] }
ndarray = "0.17"
rustfft = "6"
tokenizers = "0.21"
tokio-util = "0.7"
socket2 = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
